WIP: implementar swagger
